--- a/package.json
+++ b/package.json
@@ -11,19 +11,27 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.6.1",
+    "@vercel/postgres": "^0.10.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
+    "feed": "^5.2.0",
     "fuse.js": "^7.1.0",
     "leaflet": "^1.9.4",
     "next": "^15.5.9",
+    "nodemailer": "^7.0.12",
+    "pg": "^8.17.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "react-leaflet-cluster": "^4.0.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
