--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,4 +1,4 @@
-# ConfScout Conference Aggregator - Python Dependencies
-
 requests>=2.31.0
 beautifulsoup4>=4.12.0
+python-dateutil>=2.8.2
+geopy>=2.4.0
