--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "fetch-data": "python3 scripts/fetch_confs.py"
   },
   "dependencies": {
+    "@sentry/nextjs": "^10.37.0",
     "@vercel/analytics": "^1.6.1",
+    "@vercel/kv": "^3.0.0",
     "@vercel/postgres": "^0.10.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
