--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "fetch-data": "python3 scripts/fetch_confs.py"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@sentry/nextjs": "^10.37.0",
     "@vercel/analytics": "^1.6.1",
     "@vercel/kv": "^3.0.0",
     "@vercel/postgres": "^0.10.0",
+    "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "feed": "^5.2.0",
     "fuse.js": "^7.1.0",
     "leaflet": "^1.9.4",
     "next": "^15.5.9",
+    "next-auth": "^4.24.13",
     "nodemailer": "^7.0.12",
     "pg": "^8.17.2",
+    "prisma": "^6.19.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
