feat: Implement Upstash Redis caching
- Replace @vercel/kv with @upstash/redis in src/lib/cache.ts
- Implement safe lazy initialization for Redis client to prevent build errors
- Update src/app/page.tsx to fetch data from /api/conferences endpoint instead of static JSON
- Optimize data loading flow to utilize server-side caching
- Ensure fallback to filesystem if Redis is unavailable

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^6.19.2",
     "@sentry/nextjs": "^10.37.0",
+    "@upstash/redis": "^1.36.1",
     "@vercel/analytics": "^1.6.1",
-    "@vercel/kv": "^3.0.0",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
