--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.563.0",
     "next": "^15.5.9",
     "next-auth": "^4.24.13",
+    "next-intl": "^4.8.0",
     "nodemailer": "^7.0.12",
     "pg": "^8.17.2",
     "react": "^19.1.0",
