--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^17.2.3",
     "feed": "^5.2.0",
     "fuse.js": "^7.1.0",
+    "groq-sdk": "^0.37.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.563.0",
     "next": "^15.5.9",
