fix(build): Resolve Prisma type errors and Sentry configuration issues
- Added postinstall: prisma generate to package.json
- Created src/instrumentation.ts for Sentry initialization (Next.js 15 recommendation)
- Fixed Prisma namespace type errors in API routes by using explicit casting and ensuring client generation
- Cleaned up deprecated Sentry options in next.config.ts
- Verified successful build locally

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "fetch-data": "./scripts/ingest.sh"
+    "fetch-data": "./scripts/ingest.sh",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
