--- a/.github/workflows/ingest.yml
+++ b/.github/workflows/ingest.yml
@@ -45,4 +45,4 @@ jobs:
           git config --local user.name "GitHub Action"
           git add public/data/conferences.json
           git commit -m "chore: data update [skip ci]" || echo "No changes to commit"
-          git push
+          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
