--- a/.github/workflows/sync_events.yml
+++ b/.github/workflows/sync_events.yml
@@ -23,6 +23,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.PAT_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -53,7 +55,7 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git add public/data/conferences.json
           git commit -m "chore: update conference data [skip ci]"
-          git push
+          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
 
       - name: Summary
         run: |
