--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
-    "@types/jest": "^30.0.0",
+    "@types/jest": "^29.5.0",
     "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.5",
@@ -50,7 +50,7 @@
     "eslint": "^9",
     "eslint-config-next": "^15.5.9",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jest-util": "^29.7.0",
     "null-loader": "^4.0.1",
     "prisma": "^6.19.2",
     "tailwindcss": "^4",
